--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-apply from: '../adsdk/encrypt.gradle'
-apply from: '../adsdk/channel_pack.gradle'
 ext {
     openRelease = true
 }
@@ -55,7 +53,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:multidex:1.0.0'
     if (useProject) {
-        implementation project(":adsdk")
+        implementation project(":library")
     } else {
         implementation 'com.hauyu:adsdk:+'
     }
