--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,10 @@ android {
         multiDexEnabled true
         ext {
             app_channels = ['vivo', 'oppo']
-            channel_key = "MY_LEBIAN"
+            channel_key = ["MY_LEBIAN", "MY_CUSTOM_CHANNEL_KEY"]
+            channel_cfg = [
+                    "vivo": ["label": "string/app_name2", "icon":"drawable/ic_launcher"]
+            ]
         }
     }
 
