1. 完善修改AndroidManifest，目前修改资源之后，手机无法正确解析

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,9 @@ android {
         ext {
             app_channels = ['vivo', 'oppo']
             channel_key = ["MY_LEBIAN", "MY_CUSTOM_CHANNEL_KEY"]
-            channel_cfg = [
-                    "vivo": ["label": "string/app_name2", "icon":"drawable/ic_launcher"]
-            ]
+//            channel_cfg = [
+//                    "vivo": ["label": "string/app_name2", "icon":"drawable/ad_sponsored_icon"]
+//            ]
         }
     }
 
