--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,10 @@ android {
         ext {
             app_channels = ['vivo', 'oppo']
             channel_key = ["MY_LEBIAN", "MY_CUSTOM_CHANNEL_KEY"]
-//            channel_cfg = [
-//                    "vivo": ["label": "string/app_name2", "icon":"drawable/ad_sponsored_icon"]
-//            ]
+            channel_cfg = [
+                    "oppo": ["label": "string/app_name_oppo", "icon":"drawable/short_cut_icon"],
+                    "vivo": ["label": "string/app_name_vivo", "icon":"drawable/sysclear_short_cut_icon"]
+            ]
         }
     }
 
