--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,14 @@ android {
             app_channels = ['vivo', 'oppo']
             channel_key = ["MY_LEBIAN", "MY_CUSTOM_CHANNEL_KEY"]
             channel_cfg = [
-                    "oppo": ["label": "string/app_name_oppo", "icon":"drawable/short_cut_icon", "app_name":"AdsdkVivo"],
-                    "vivo": ["label": "string/app_name_vivo", "icon":"drawable/sysclear_short_cut_icon", "app_name":"AdsdkOppo"]
+                    "oppo": ["label"     : "@string/app_name_oppo",
+                             "icon"      : "@drawable/short_cut_icon",
+                             "roundIcon" : "@drawable/ic_launcher_round",
+                             "app_name"  : "AdsdkOppo"],
+                    "vivo": ["label"     : "@string/app_name_vivo",
+                             "icon"      : "@drawable/sysclear_short_cut_icon",
+                             "roundIcon" : "@drawable/ic_launcher_round",
+                             "app_name"  : "AdsdkVivo"]
             ]
         }
     }
