--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:name="com.hauyu.adsdk.demo.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@drawable/ic_audiotrack_red_300_24dp"
         android:label="@string/app_name">
         <activity
             android:name="com.hauyu.adsdk.demo.MainActivity"
