1. 优化加密文件方式，原来的方式是在打包之前对文件进行加密，新的方案是打包成apk之后，从apk中读出待加密的文件，然后在进行加密，加密完成之后，在放回apk中，最后签名

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply from: '../library/encrypt.gradle'
 ext {
     openRelease = true
+    encryptFiles = ["complex_names", "spconfig"]
 }
 def useProject = true;
 
