--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:name="com.hauyu.adsdk.demo.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@drawable/ic_audiotrack_red_300_24dp"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:roundIcon="@drawable/ic_audiotrack_red_300_24dp">
         <activity
-            android:name="com.hauyu.adsdk.demo.MainActivity"
-            android:screenOrientation="portrait">
+            android:name="com.hauyu.adsdk.demo.SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.hauyu.adsdk.demo.ListViewForAd" />
+        <activity android:name=".MainActivity" />
 
         <meta-data
             android:name="android.max_aspect"
