1. 优化开屏样式

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -20,14 +20,14 @@
         {
           "sdk": "mopub",
           "type": "native",
-          "pid": "11a17b188668469fb0412708c3d16813",
-          "disable": 1
+          "pid": "9439665e1f05483197562159c72aef98",
+          "disable": 0
         },
         {
           "sdk": "admob",
           "type": "native",
           "pid": "ca-app-pub-3940256099942544/2247696110",
-          "disable": 0
+          "disable": 1
         }
       ],
       "maxcount": 100,
@@ -41,18 +41,19 @@
           "sdk": "fb",
           "type": "native",
           "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 0
+          "disable": 1
         },
         {
           "sdk": "mopub",
           "type": "native",
           "pid": "11a17b188668469fb0412708c3d16813",
-          "disable": 0
+          "disable": 1
         },
         {
           "sdk": "admob",
           "type": "native",
           "pid": "ca-app-pub-3940256099942544/2247696110",
+          "cv": ["cta"],
           "disable": 0
         }
       ],
