--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -21,6 +21,7 @@
           "sdk": "mopub",
           "type": "native",
           "pid": "9439665e1f05483197562159c72aef98",
+          "mark": "测试APP广告位",
           "disable": 0
         },
         {
@@ -47,6 +48,7 @@
           "sdk": "mopub",
           "type": "native",
           "pid": "9439665e1f05483197562159c72aef98",
+          "mark": "测试APP广告位",
           "disable": 0
         },
         {
@@ -83,50 +85,58 @@
           "sdk": "fb",
           "type": "native",
           "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 0
+          "disable": 1
         },
         {
           "sdk": "fb",
           "type": "banner",
           "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 0
+          "disable": 1
         },
         {
           "sdk": "mopub",
           "type": "native",
           "pid": "11a17b188668469fb0412708c3d16813",
+          "mark": "mopub测试广告位",
           "disable": 0
+        },
+        {
+          "sdk": "mopub",
+          "type": "native",
+          "pid": "9439665e1f05483197562159c72aef98",
+          "mark": "测试APP广告位",
+          "disable": 1
         },
         {
           "sdk": "mopub",
           "type": "banner",
           "pid": "252412d5e9364a05ab77d9396346d73d",
-          "disable": 0
+          "disable": 1
         },
         {
           "sdk": "mopub",
           "type": "native",
           "pid": "02a2d288d2674ad09f3241d46a44356e",
-          "disable": 0
+          "disable": 1
         },
         {
           "sdk": "admob",
           "type": "banner",
           "pid": "ca-app-pub-3940256099942544/6300978111",
-          "disable": 0
+          "disable": 1
         },
         {
           "sdk": "admob",
           "type": "native",
           "pid": "ca-app-pub-3940256099942544/2247696110",
-          "disable": 0
+          "disable": 1
         },
         {
           "sdk": "applovin",
           "type": "banner",
           "bs": "MEDIUM_RECTANGLE",
           "pid": "a9eeb2d3ee33003c",
-          "disable": 0
+          "disable": 1
         }
       ],
       "maxcount": 100,
