1. 增加admob开屏加载代码

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -1,6 +1,19 @@
 {
   "adplaces": [
     {
+      "name": "admob_splash",
+      "mode": "con",
+      "pids": [
+        {
+          "sdk": "admob",
+          "type": "splash",
+          "pid": "ca-app-pub-3940256099942544/3419835294"
+        }
+      ],
+      "maxcount": 100,
+      "percent": 100
+    },
+    {
       "name": "native_splash",
       "mode": "con",
       "pids": [
