--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -1,7 +1,7 @@
 {
   "adplaces": [
     {
-      "name": "admob_splash",
+      "name": "splash_admob",
       "mode": "con",
       "pids": [
         {
@@ -9,410 +9,196 @@
           "type": "splash",
           "pid": "ca-app-pub-3940256099942544/3419835294"
         }
-      ],
-      "maxcount": 100,
-      "percent": 100
+      ]
     },
     {
-      "name": "native_splash",
+      "name": "banner_admob",
       "mode": "con",
       "pids": [
         {
-          "sdk": "fb",
-          "type": "native",
-          "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 1
-        },
-        {
-          "sdk": "mopub",
-          "type": "native",
-          "pid": "bb410fc77500463e8d1e397072823e08",
-          "mark": "测试APP广告位",
-          "disable": 1
-        },
-        {
           "sdk": "admob",
-          "type": "native",
-          "pid": "ca-app-pub-3940256099942544/2247696110",
-          "disable": 1
-        },
-        {
-          "sdk": "mintegral",
-          "type": "native",
-          "pid": "146868",
-          "cv": [
-            "cta"
-          ],
-          "extra": {
-            "app_key": "7c22942b749fe6a6e361b675e96b3ee9",
-            "app_id": "118690",
-            "unit_id": "146868",
-            "placement_id": "138780"
-          },
-          "disable": 1
-        },
-        {
-          "sdk": "inmobi",
-          "type": "native",
-          "pid": "1638846642398",
-          "cv": [
-            "cta",
-            "title"
-          ],
-          "extra": {
-            "account_id": "0ad6ff4e884340ed9c480177af959b94"
-          },
-          "disable": 0
-        },
-        {
-          "sdk": "mintegral",
-          "type": "native",
-          "pid": "262716",
-          "template": 1,
-          "extra": {
-            "app_key": "7c22942b749fe6a6e361b675e96b3ee9",
-            "app_id": "118690",
-            "unit_id": "258656",
-            "placement_id": "202132"
-          },
-          "mrt": 5,
-          "disable": 0
+          "type": "banner",
+          "pid": "ca-app-pub-3940256099942544/6300978111"
         }
-      ],
-      "maxcount": 100,
-      "percent": 100
+      ]
     },
     {
-      "name": "for_native_layout",
+      "name": "banner_mopub",
       "mode": "con",
       "pids": [
         {
-          "sdk": "fb",
-          "type": "native",
-          "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 1
-        },
-        {
           "sdk": "mopub",
-          "type": "native",
-          "pid": "043b7cd7529f4b92b200afd58d461c3e",
-          "mark": "测试APP广告位",
-          "mrt": 5,
-          "disable": 0
-        },
-        {
-          "sdk": "admob",
-          "type": "native",
-          "pid": "ca-app-pub-3940256099942544/2247696110",
-          "cv": [
-            "cta"
-          ],
-          "disable": 1
-        },
-        {
-          "sdk": "mintegral",
-          "type": "native",
-          "pid": "146868",
-          "extra": {
-            "app_key": "7c22942b749fe6a6e361b675e96b3ee9",
-            "app_id": "118690",
-            "unit_id": "146868",
-            "placement_id": "138780"
-          },
-          "disable": 1
+          "type": "banner",
+          "pid": "252412d5e9364a05ab77d9396346d73d"
         }
-      ],
-      "maxcount": 100,
-      "percent": 100
+      ]
     },
     {
-      "name": "banner_and_native",
+      "name": "banner_applovin",
       "mode": "con",
-      "cc": [
-        "#FF660000",
-        "#4455bb22"
-      ],
-      "cs": 1,
-      "nl": [
-        "head, small, tiny"
-      ],
       "pids": [
-        {
-          "sdk": "spread",
-          "type": "native",
-          "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 1
-        },
-        {
-          "sdk": "fb",
-          "type": "native",
-          "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 1
-        },
-        {
-          "sdk": "fb",
-          "type": "banner",
-          "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 1
-        },
-        {
-          "sdk": "mopub",
-          "type": "native",
-          "pid": "11a17b188668469fb0412708c3d16813",
-          "mark": "mopub测试广告位",
-          "disable": 1
-        },
-        {
-          "sdk": "mopub",
-          "type": "native",
-          "pid": "bb410fc77500463e8d1e397072823e08",
-          "mark": "测试APP广告位",
-          "disable": 1
-        },
-        {
-          "sdk": "mopub",
-          "type": "banner",
-          "pid": "252412d5e9364a05ab77d9396346d73d",
-          "disable": 1
-        },
-        {
-          "sdk": "mopub",
-          "type": "banner",
-          "pid": "bfd61bd407d84d17b241e6a707391c4d",
-          "mark": "测试APP广告位",
-          "disable": 1
-        },
-        {
-          "sdk": "mopub",
-          "type": "native",
-          "pid": "02a2d288d2674ad09f3241d46a44356e",
-          "disable": 1
-        },
-        {
-          "sdk": "admob",
-          "type": "banner",
-          "pid": "ca-app-pub-3940256099942544/6300978111",
-          "disable": 1
-        },
-        {
-          "sdk": "admob",
-          "type": "native",
-          "pid": "ca-app-pub-3940256099942544/2247696110",
-          "disable": 1
-        },
         {
           "sdk": "applovin",
           "type": "banner",
-          "bs": "MEDIUM_RECTANGLE",
-          "pid": "a9eeb2d3ee33003c",
-          "disable": 1
-        },
-        {
-          "sdk": "mintegral",
-          "type": "native",
-          "pid": "146868",
-          "extra": {
-            "app_key": "7c22942b749fe6a6e361b675e96b3ee9",
-            "app_id": "118690",
-            "unit_id": "146868",
-            "placement_id": "138780"
-          },
-          "disable": 1
-        },
-        {
-          "sdk": "mintegral",
-          "type": "native",
-          "pid": "262716",
-          "template": 1,
-          "mrt": 5,
-          "extra": {
-            "app_key": "7c22942b749fe6a6e361b675e96b3ee9",
-            "app_id": "118690",
-            "unit_id": "258656",
-            "placement_id": "202132"
-          },
-          "disable": 1
-        },
-        {
-          "sdk": "applovin",
-          "type": "native",
-          "template": 1,
-          "pid": "04bb953da790a09b",
-          "disable": 1
-        },
+          "pid": "e50fc72f0cc75dc6"
+        }
+      ]
+    },
+    {
+      "name": "banner_tradplus",
+      "mode": "con",
+      "pids": [
         {
           "sdk": "tradplus",
-          "type": "native",
-          "pid": "C0A4A6BA231CA19D882F007E143818EA",
+          "type": "banner",
+          "pid": "49AC8EA783C45A3246354B34A1B1E742",
           "extra": {
             "app_id": "BA819D2F55B23ED81FD43E632EFF0FE7"
-          },
-          "disable": 0
+          }
         }
-      ],
-      "maxcount": 100,
-      "percent": 100
+      ]
     },
     {
-      "name": "interstitial",
+      "name": "interstitial_admob",
       "mode": "con",
       "pids": [
         {
           "sdk": "admob",
           "type": "interstitial",
-          "pid": "ca-app-pub-3940256099942544/1033173712",
-          "disable": 1
-        },
-        {
-          "sdk": "fb",
-          "type": "interstitial",
-          "pid": "VID_HD_16_9_15S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 1
-        },
-        {
-          "sdk": "mopub",
-          "type": "interstitial",
-          "pid": "24534e1901884e398f1253216226017e",
-          "disable": 1
-        },
+          "pid": "ca-app-pub-3940256099942544/1033173712"
+        }
+      ]
+    },
+    {
+      "name": "interstitial_mopub",
+      "mode": "con",
+      "pids": [
         {
           "sdk": "mopub",
           "type": "interstitial",
-          "mark": "测试APP广告位",
-          "pid": "c32e5d6016434bcc84fcb3e27fc54619",
-          "disable": 1
-        },
-        {
-          "sdk": "spread",
-          "type": "interstitial",
-          "disable": 1
-        },
+          "pid": "24534e1901884e398f1253216226017e"
+        }
+      ]
+    },
+    {
+      "name": "interstitial_applovin",
+      "mode": "con",
+      "pids": [
         {
           "sdk": "applovin",
           "type": "interstitial",
-          "bs": "MEDIUM_RECTANGLE",
-          "pid": "6564124aafcc90d6",
-          "disable": 1
-        },
+          "pid": "3717ab1ce7390679"
+        }
+      ]
+    },
+    {
+      "name": "interstitial_tradplus",
+      "mode": "con",
+      "pids": [
         {
           "sdk": "tradplus",
           "type": "interstitial",
           "pid": "390467770FD3681386CF5C74E7244B30",
           "extra": {
             "app_id": "BA819D2F55B23ED81FD43E632EFF0FE7"
-          },
-          "disable": 0
+          }
         }
-      ],
-      "maxcount": 100,
-      "percent": 100
+      ]
     },
     {
-      "name": "reward_video",
+      "name": "reward_admob",
       "mode": "con",
-      "retry": 1,
-      "qs": 2,
       "pids": [
         {
           "sdk": "admob",
           "type": "reward",
-          "pid": "ca-app-pub-3940256099942544/5224354917",
-          "disable": 1
-        },
+          "pid": "ca-app-pub-3940256099942544/5224354917"
+        }
+      ]
+    },
+    {
+      "name": "reward_mopub",
+      "mode": "con",
+      "pids": [
         {
           "sdk": "mopub",
           "type": "reward",
-          "pid": "89c000c7bb514d8fa78614f8b53a356b",
-          "disable": 1
-        },
-        {
-          "sdk": "mopub",
-          "type": "reward",
-          "mark": "测试APP广告位",
-          "pid": "d5bac1a5700c4f3aa0ac1db70724a893",
-          "disable": 1
-        },
-        {
-          "sdk": "fb",
-          "type": "reward",
-          "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
-          "disable": 1
-        },
+          "pid": "89c000c7bb514d8fa78614f8b53a356b"
+        }
+      ]
+    },
+    {
+      "name": "reward_applovin",
+      "mode": "con",
+      "pids": [
         {
           "sdk": "applovin",
           "type": "reward",
-          "pid": "b1f3b51e98603fbf",
-          "disable": 1
-        },
+          "pid": "b500a6ebaae0b7e6"
+        }
+      ]
+    },
+    {
+      "name": "reward_tradplus",
+      "mode": "con",
+      "pids": [
         {
           "sdk": "tradplus",
           "type": "reward",
           "pid": "A5AF90C502A014B3BDCF2B267ADA6007",
           "extra": {
             "app_id": "BA819D2F55B23ED81FD43E632EFF0FE7"
-          },
-          "disable": 0
+          }
         }
-      ],
-      "maxcount": 100,
-      "percent": 100
+      ]
     },
     {
-      "name": "ad_complex",
+      "name": "native_admob",
       "mode": "con",
       "pids": [
         {
-          "sdk": "spread",
-          "type": "interstitial",
-          "disable": 1
-        },
-        {
           "sdk": "admob",
-          "type": "interstitial",
-          "pid": "ca-app-pub-3940256099942544/1033173712",
-          "disable": 0
-        },
+          "type": "native",
+          "pid": "ca-app-pub-3940256099942544/2247696110"
+        }
+      ]
+    },
+    {
+      "name": "native_mopub",
+      "mode": "con",
+      "pids": [
         {
           "sdk": "mopub",
           "type": "native",
-          "pid": "11a17b188668469fb0412708c3d16813",
-          "cv": [
-            "cta",
-            "title",
-            "cover"
-          ],
-          "disable": 0
-        },
-        {
-          "sdk": "admob",
-          "type": "reward",
-          "pid": "ca-app-pub-3940256099942544/5224354917",
-          "disable": 0
+          "pid": "02a2d288d2674ad09f3241d46a44356e"
         }
-      ],
-      "maxcount": 100,
-      "percent": 100
+      ]
     },
     {
-      "name": "show_spread",
+      "name": "native_applovin",
       "mode": "con",
-      "bs": 2,
-      "cc": [
-        "#FF660000",
-        "#4455bb22"
-      ],
-      "nl": [
-        "tiny"
-      ],
       "pids": [
         {
-          "sdk": "spread",
+          "sdk": "applovin",
           "type": "native",
-          "disable": 0
+          "template": 1,
+          "pid": "362f47498059fbdb"
         }
-      ],
-      "maxcount": 100,
-      "percent": 100
+      ]
+    },
+    {
+      "name": "native_tradplus",
+      "mode": "con",
+      "pids": [
+        {
+          "sdk": "tradplus",
+          "type": "native",
+          "pid": "C0A4A6BA231CA19D882F007E143818EA",
+          "extra": {
+            "app_id": "BA819D2F55B23ED81FD43E632EFF0FE7"
+          }
+        }
+      ]
     }
   ]
 }
