--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -193,6 +193,7 @@
         {
           "sdk": "tradplus",
           "type": "native",
+          "snl": {"mintegral": "large"},
           "pid": "C0A4A6BA231CA19D882F007E143818EA",
           "extra": {
             "app_id": "BA819D2F55B23ED81FD43E632EFF0FE7"
